--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@types/body-parser": "^1.16.2",
     "@types/express": "^4.0.35",
-    "@types/node": "^7.0.12"
+    "@types/node": "^7.0.12",
+    "@types/core-js": "^0.9.45"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
